--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
   "dependencies": {
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
-    "preact-router": "^2.5.7"
+    "preact-redux": "^2.0.3",
+    "preact-router": "^2.5.7",
+    "react-xml-parser": "^1.1.2",
+    "redux": "^4.0.1",
+    "redux-offline": "^2.0.0"
   },
   "jest": {
     "verbose": true,
