--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "preact-router": "^2.5.7",
     "react-xml-parser": "^1.1.2",
     "redux": "^4.0.1",
-    "redux-offline": "^2.0.0"
+    "redux-offline": "^2.0.0",
+    "webpack": "^3.11.0"
   },
   "jest": {
     "verbose": true,
